Bug 14551 - rpcint_dispatch() no longer calls NDR_PRINT_FUNCTION_DEBUG(..., NDR_OUT ...)
Summary: rpcint_dispatch() no longer calls NDR_PRINT_FUNCTION_DEBUG(..., NDR_OUT ...)
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DCE-RPCs and pipes (show other bugs)
Version: 4.13.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-23 10:08 UTC by Stefan Metzmacher
Modified: 2021-02-27 14:27 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2020-10-23 10:08:20 UTC
This got lost in the transition to use librpc/rpc/dcesrv_core.c in source3
Comment 1 Samba QA Contact 2020-10-23 17:25:07 UTC
This bug was referenced in samba master:

7c8a7e8a15b433cd151afff0b52e9e5096a2c230
42e79cee3d306a92243cc6c4898c5e280535d67b
7bd321e71b7f38994236d84795e08d3818b69dc1
d08a6b4200411114c0b9a8fa46dd6acd91d47476
Comment 2 Björn Jacke 2021-02-27 14:27:51 UTC
closing, fixed for master and 4.14