source3/rpc_server/rpc_ncacn_np.c
@@ -421,69 +421,6 @@ fail:
 	return status;
 }
 
-static NTSTATUS rpcint_dispatch(struct dcesrv_call_state *call)
-{
-	NTSTATUS status;
-	struct ndr_pull *pull = NULL;
-	struct ndr_push *push = NULL;
-	struct data_blob_list_item *rep = NULL;
-
-	pull = ndr_pull_init_blob(&call->pkt.u.request.stub_and_verifier,
-				  call);
-	if (pull == NULL) {
-		return NT_STATUS_NO_MEMORY;
-	}
-
-	pull->flags |= LIBNDR_FLAG_REF_ALLOC;
-
-	call->ndr_pull = pull;
-
-	/* unravel the NDR for the packet */
-	status = call->context->iface->ndr_pull(call, call, pull, &call->r);
-	if (!NT_STATUS_IS_OK(status)) {
-		DBG_ERR("DCE/RPC fault in call %s:%02X - %s\n",
-			call->context->iface->name,
-			call->pkt.u.request.opnum,
-			dcerpc_errstr(call, call->fault_code));
-		return status;
-	}
-
-	status = call->context->iface->local(call, call, call->r);
-	if (!NT_STATUS_IS_OK(status)) {
-		DBG_ERR("DCE/RPC fault in call %s:%02X - %s\n",
-			call->context->iface->name,
-			call->pkt.u.request.opnum,
-			dcerpc_errstr(call, call->fault_code));
-		return status;
-	}
-
-	push = ndr_push_init_ctx(call);
-	if (push == NULL) {
-		return NT_STATUS_NO_MEMORY;
-	}
-
-	push->ptr_count = call->ndr_pull->ptr_count;
-
-	status = call->context->iface->ndr_push(call, call, push, call->r);
-	if (!NT_STATUS_IS_OK(status)) {
-		DBG_ERR("DCE/RPC fault in call %s:%02X - %s\n",
-			call->context->iface->name,
-			call->pkt.u.request.opnum,
-			dcerpc_errstr(call, call->fault_code));
-		return status;
-	}
-
-	rep = talloc_zero(call, struct data_blob_list_item);
-	if (rep == NULL) {
-		return NT_STATUS_NO_MEMORY;
-	}
-
-	rep->blob = ndr_push_blob(push);
-	DLIST_ADD_END(call->replies, rep);
-
-	return NT_STATUS_OK;
-}
-
 struct rpcint_bh_state {
 	struct dcesrv_connection *conn;
 };
@@ -567,7 +504,7 @@ static struct tevent_req *rpcint_bh_raw_call_send(TALLOC_CTX *mem_ctx,
 	state->call->pkt.u.request.stub_and_verifier.length = in_length;
 
 	/* TODO: allow async */
-	status = rpcint_dispatch(state->call);
+	status = dcesrv_call_dispatch_local(state->call);
 	if (!NT_STATUS_IS_OK(status)) {
 		tevent_req_nterror(req, status);
 		return tevent_req_post(req, ev);
